--- a/app/views/products/_product_show_packagist.html.erb
+++ b/app/views/products/_product_show_packagist.html.erb
@@ -4,6 +4,7 @@
 </div>
 
 <div class="span8 content_head_top" >
+  <%= render 'products/helpers/security_vulnerabilities' %>
   <%= render 'products/product_show_description' %>
   <%= render 'products/helpers/kpi_summary' %>
   <%= render 'products/product_show_dependencies' %>
