--- a/app/views/user/projects/show.html.erb
+++ b/app/views/user/projects/show.html.erb
@@ -5,6 +5,7 @@
 <% else %>
 
   <%= render "/shared/dialog_mute" %>
+  <%= render "/shared/dialog_mute_security" %>
 
   <div class="col-md-3" >
     <% if @organisation %>
