--- a/app/views/products/helpers/_security_vulnerabilities.html.erb
+++ b/app/views/products/helpers/_security_vulnerabilities.html.erb
@@ -17,6 +17,9 @@
           <% sv.links.keys.each do |key| %>
             <a href="<%= sv.links[key] %>"><%= sv.links[key] %></a><br/>
           <% end %>
+          <% if !sv.source.to_s.empty? %>
+            <span class="label_bold">Source</span>: <%= sv.source %><br/>
+          <% end %>
           Affected versions: <%= sv.affected_versions_string %>
         </div>
 
@@ -58,6 +61,9 @@
           <% if !sv.publish_date.to_s.empty? %>
             <span class="label_bold">Published</span>: <%= sv.publish_date %><br/>
           <% end %>
+          <% if !sv.source.to_s.empty? %>
+            <span class="label_bold">Source</span>: <%= sv.source %><br/>
+          <% end %>
           <span class="label_bold">Affected versions</span>: <%= sv.affected_versions_string %><br/>
           <span class="label_bold">Patched versions</span>: <%= sv.patched_versions_string %><br/>
           <% if !sv.description.to_s.empty? %>
@@ -94,6 +100,9 @@
           <br/>
           <% if !sv.cve.to_s.empty? %>
             <span class="label_bold">CVE</span>: <%= sv.cve %><br/>
+          <% end %>
+          <% if !sv.source.to_s.empty? %>
+            <span class="label_bold">Source</span>: <%= sv.source %><br/>
           <% end %>
           <% if !sv.cvss_v2.to_s.empty? %>
             <span class="label_bold">CVSSv2</span>: <%= sv.cvss_v2 %><br/>
@@ -138,6 +147,9 @@
             <% end %>
             <% if !sv.cvss_v2.to_s.empty? %>
               <span class="label_bold">CVSSv2</span>: <%= sv.cvss_v2 %><br/>
+            <% end %>
+            <% if !sv.source.to_s.empty? %>
+              <span class="label_bold">Source</span>: <%= sv.source %><br/>
             <% end %>
             <% if !sv.links.empty? %>
               <span class="label_bold">Links</span>:
